# MicroManus-Naman

./: .gitignore  CLOUD_RUN_DEPLOYMENT.md  RAZORPAY_REVIEW.md  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  render.yaml
apps/web/: .env.example  .gitignore  next-env.d.ts  next.config.ts  package.json  proxy.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/app/chat/: page.tsx
apps/web/app/contact/: page.tsx
apps/web/app/pricing/: page.tsx
apps/web/app/privacy/: page.tsx
apps/web/app/refund-policy/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/shipping-policy/: page.tsx
apps/web/app/sign-in/: page.tsx
apps/web/app/subscribe/: page.tsx
apps/web/app/terms/: page.tsx
apps/web/app/usage/: page.tsx
apps/web/components/: app-shell.tsx
apps/web/components/auth/: sign-in-client.tsx
apps/web/components/chat/: agent-trace.tsx  chat-workspace.tsx
apps/web/components/ui/: brand.tsx  (+1 more)
services/agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  hf_app.py  pyproject.toml  requirements.txt
services/agent/app/: __init__.py  auth.py  checkpoints.py  config.py  graph.py  main.py  models.py  pricing.py  reports.py  schemas.py  security.py  sse.py  tools.py  usage.py
services/agent/app/registry/: __init__.py  pricing.v1.json
services/agent/tests/: test_api.py  test_graph.py  test_hf_app.py  test_models.py  test_pricing.py  test_reports.py  test_security.py  test_tools.py  test_usage.py
supabase/: README.md
supabase/migrations/: 202607170001_micromanus_core.sql  202607180001_razorpay_billing.sql  202607180002_expand_openai_model_catalog.sql
(+44 files in other folders)
