[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "micromanus-agent"
version = "0.1.0"
description = "Checkpointed LangGraph deep-research service for MicroManus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20,<1",
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langchain-anthropic>=0.3,<2",
  "langchain-core>=0.3.35,<2",
  "langchain-openai>=0.3,<2",
  "langgraph>=0.3,<2",
  "langgraph-checkpoint-sqlite>=2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "pypdf>=5,<7",
  "reportlab>=4.2,<5",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "respx>=0.22,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"app/registry/pricing.v1.json" = "app/registry/pricing.v1.json"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]
